--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,21 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "form_legend_clear";
 @import "navbar";
+
+@import "products";
+
+@import "banner";
+@import "card_category";
+@import "form";
+@import "card_review";
+@import "card_coffees";
+@import "search";
+@import "button";
+@import "map";
+@import "coffee_pack";
+@import "user_profile";
+@import "head";
+@import "ocr";
+@import "sub_categories";
+
