--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,5 @@
-// Specific CSS for your home-page
+.container-home {
+  color: black;
+  font-family: 'Work Sans', sans-serif;
+  text-align: center;
+}
