--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,9 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background:#5D4337;  //#d59638
+  // #dd9e3e segunda cor
+  color: #b3916c;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +11,22 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 25px;
+}
+
+.navbar {
+  height: 60px;
+  width: 100%;
+}
+
+.navbar li {
+  list-style-type: none;
+}
+
+.fixed-bottom {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
 }
