--- a/app/views/pages/roast.html.erb
+++ b/app/views/pages/roast.html.erb
@@ -4,7 +4,7 @@
 
 <div class= "container-sub-categories">
   <% @selection.each_with_index do |select, index| %>
-    <h4><strong><%= "Torra #{@category_roast[index]}"%></strong></h4>
+    <h4><strong><%= "Torra #{@filtered_category[index]}"%></strong></h4>
     <% select[0..1].each do |cafe|%>
       <div class="card-product-category">
       <% if 2 == 1 %>
@@ -20,6 +20,6 @@
         </div>
       </div>
     <% end %>
-    <%= link_to 'Ver todos', category_path(@category_roast[index]) %>
+    <%= link_to 'Ver todos', category_path(@filtered_category[index]) %>
   <% end %>
 </div>
