refact filter page and home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,24 +5,12 @@
 </div>
 
 <div class= "container-cards-main my-0">
-  <%= link_to roast_path do %>
-    <div class="card-category-main">
-      <%= image_tag('fire.png', style:"width: 70px; margin-top: 20px;") %>
-      <p style="margin-top: 10px;">Torra</p>
-    </div>
-  <% end %>
-
-  <%= link_to sensory_path do %>
-    <div class="card-category-main">
-      <%= image_tag('sensory.png', style:"width: 70px; margin-top: 20px;") %>
-      <p> Perfil sensorial </p>
-    </div>
-  <% end %>
-
-  <%= link_to taste_path do %>
-    <div class="card-category-main">
-      <%= image_tag('taste.png', style:"width: 90px; margin-top: 20px;") %>
-      <p>Sabor</p>
-    </div>
+  <% %w[taste sensory roast].each do |category| %>
+    <%= link_to filter_path(category) do %>
+      <div class="card-category-main">
+        <%= image_tag("#{category}.png", style:"width: 70px; margin-top: 20px;") %>
+        <p><%= category %></p>
+      </div>
+    <% end %>
   <% end %>
 </div>
