--- a/app/views/coffees/_form.html.erb
+++ b/app/views/coffees/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <div class="form-login">
-        <h2>Adicione um novo café</h2>
+        <h2><%= "#{action}" %></h2>
         <%= simple_form_for @coffee do |f| %>
           <%= f.input :name, label: 'Nome' %>
           <%= f.input :brand, label: 'Marca' %>
