--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Users:</h1>
 <ul>
-  <%= render @users %>
+<li data-user=<%= user.id %>>
+  <%= user.email %>
+    # Like unlike logic, and most of it's front end still needs a revamp
+  </li>
 </ul>
