--- a/app/views/coffees/show.html.erb
+++ b/app/views/coffees/show.html.erb
@@ -52,5 +52,46 @@
   </div>
 </div>
 
-<!-- Social media render 'share_link' -->
+<%= render 'review' %>
+
+<% @reviews.each do |review|  %>
+    <div class="card-review">
+      <div class="card-top">
+        <img id="avatar" src="https://images.unsplash.com/photo-1579454824457-8f6bf05a597c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80">
+        <p style="padding-left: 10px;">
+          <%= link_to review.user.first_name, user_path(review.user) %>
+        </p>
+      </div>
+
+      <p>
+        <%= review.content %>
+      </p>
+
+      <div class="row", style="margin: 0px;">
+        <p>
+        <% review.rating.times do %>
+          <i class="fas fa-star", style="color: #fece02;"></i>
+        <% end %>
+        <% (5- review.rating).times do %>
+          <i class="far fa-star", style="color: #fece02;" ></i>
+        <% end %>
+        </p>
+        <p>
+          <% if user_signed_in? && current_user.id != review.user_id %>
+              <% image_path =  review.review_likes.any? ? 'fas' : 'far' %>
+                <p><%= link_to "<i class='#{image_path} fa-thumbs-up'></i>".html_safe,
+                       review_toggle_review_like_path(review),
+                       remote: true,
+                       method: :post,
+                       id:"review-#{review.id}" %> <span id="review-<%= review.id %>-count"><%= review.review_likes.count %></span></p>
+          <% end %>
+        </p>
+      </div>
+      <% if user_signed_in? && current_user.id == review.user_id %>
+        <%= link_to image_tag('edit.png', style:"width: 20px;"), edit_coffee_review_path(@coffee, review)  %>
+        <%= link_to image_tag('delete.png', style:"width: 20px;"), review_path(review), method: :delete  %>
+      <% end %>
+    </div>
+<% end %>
+
 
